# stairs_detection

./: .gitignore  CMakeLists.txt  README.md  detect_object_from_pcd.py  package.xml  visualize_pcd.py
include/RGBD/: global_scene.h  visualizer.h
msg/: stair_info.msg
src/: main_stairs.cpp
src/RGBD/: current_scene.cpp  plane.cpp  visualizer.cpp
src/stair/: stair_classes.cpp  visualizer_stair.cpp
yolo/: yolo.ipynb
yolo/datasets/: README.dataset.txt  README.roboflow.txt  data.yaml
yolo/datasets/test/labels/: 0c568786cc09e0a1_output_jpg.rf.fcb30959ce09c66438af25bd8121da6b.txt  1096775958_output_jpg.rf.0cd022e42f2f967d0afc2be6bed0c87f.txt  1514180689_output_jpg.rf.c151c7645c3946388aaac304b9e64e94.txt  1582735959_output_jpg.rf.97e70acd0b6e8ff3869f45a01f59f8fe.txt  16_output_jpg.rf.99672c8418fa2603092fc4871ed397ec.txt  1890329640_output_output_jpg.rf.2b05829fc09646bcb4b5dc5cb744086d.txt  1d2052854bb6edf8_output_jpg.rf.bdeacac8b28bd7de6fc7f2b7674908f3.txt  2153937246_output_output_jpg.rf.d0709656aa8678ff1610f3c1511276fd.txt  21flip_output_jpg.rf.11785ea7e19a3a5fe6fc99b2d84886ef.txt  2219921257_output_jpg.rf.56b2b22166c204c98ace8b160709dc9e.txt  2417352234_output_jpg.rf.3a77a985209e4906c72ff64c05e4e203.txt  24_output_jpg.rf.91bd16b1a07441ce53bc6365cf3a2c87.txt  2652437777_output_jpg.rf.d8835fe067f4c124f06fefa4f475f36a.txt  2804494758_output_jpg.rf.8fcdc06e9d9594ba3148583e23ae5dda.txt  3034516166_output_jpg.rf.e3ee2d2c3517543e691afe7840b39630.txt  33_output_jpg.rf.eb7741e52ce8177cedb02536b1d38a09.txt  3826938276_output_jpg.rf.aa678b4c41cc700dd944f052b6e617b1.txt  3_output_jpg.rf.3c494cce365290224243cd930b7cda0a.txt  4069560190_output_output_jpg.rf.035e40775299c5081bf46d1bfd6ddbef.txt  4313088269_output_jpg.rf.bddc8bfcef2f5d50741d023848e6f805.txt  4798873909_output_jpg.rf.b41057ce70a64cd9f784102bc57371d1.txt  4922272969_output_jpg.rf.1a59ef8d2b2bbdc8717796f73d8b9630.txt  50flip_output_jpg.rf.c166324741a404831187f0a7fa803c43.txt  5137393726_output_output_jpg.rf.28758e06bafe148bf1341e6dda8c9416.txt  514966693_output_output_output_jpg.rf.58dc56c4e37ac94979d9e97eb56f93e6.txt  5406024500_output_jpg.rf.8e8e14f5501349fbc134e45d3be907b3.txt  5678809423_output_jpg.rf.6a5c0d1db0a1f97599feab8ddb47b871.txt  59flipped_output_jpg.rf.2617ba993932fad61ed34771f5d53d25.txt  7e48ed88da8a7066_output_jpg.rf.a8d44d529196c69d77f347ae64c668a3.txt  IMG-20210903-WA0007_output_output_jpg.rf.81b5bb4c4ca24fe99c961d02c26020df.txt  IMG-20210903-WA0012_output_output_jpg.rf.79f58f1fc169b9ed5d756a043256384e.txt  IMG-20210915-WA0021_output_jpg.rf.bb2fde049efc0730bdfff8401c5c8c91.txt  IMG-20210917-WA0020_output_jpg.rf.bfe13492e2949aece692d6c83a61a085.txt  IMG-20210920_111038_output_jpg.rf.12d6a25bd392472992ec7017f8015fcb.txt  IMG_20210920_114131_output_jpg.rf.d011f1c642b44e4af8f288cd4dea222e.txt  down12_output_output_jpg.rf.465abfad707d774fbf66608b2d00b66e.txt  down79_output_output_jpg.rf.1d45304c0df26781a4344e7f889563e0.txt  up21_output_jpg.rf.f0a947e11dcd548a5da6f661f3c1c764.txt  up30_output_jpg.rf.897d48ecad49dbc8cd9b1d95d5881611.txt  up60_output_jpg.rf.c20b9414f7c197aa67d47ea3b93cf154.txt
yolo/datasets/train/: labels.cache
yolo/datasets/train/labels/: 021e768d7d819b45_output_jpg.rf.1c16b5b67f4f467c3153b8a455e3f305.txt  021e768d7d819b45_output_jpg.rf.d5b8e186c20040cc15843dbb039de1f3.txt  058d115cc296b82c_output_jpg.rf.830d70e97ec469e472b32c04479797c6.txt  058d115cc296b82c_output_jpg.rf.8f0fadf88e1be454bf5e76626dd2e353.txt  07cd51784087dd43_output_jpg.rf.218515d095dd877fcb6d7e238102e537.txt  07cd51784087dd43_output_jpg.rf.c64930f95e95b654fa30bb38afd68d10.txt  0_output_jpg.rf.19f84a36e02fe54be8661c4b04783c9a.txt  0_output_jpg.rf.948b388bcbd40e3ecce209912fc55f94.txt  0cb6c211ae6966ed_output_jpg.rf.2361a3fa262ddc9177ba55f64514353f.txt  (+782 more)
yolo/datasets/valid/: labels.cache
(+60 files in other folders)
